--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "express": "^4.15.3",
     "save-pixels": "^2.3.4",
     "socket.io": "^2.0.2",
-    "zeros": "^1.0.0"
+    "zeros": "^1.0.0",
+    "aws-sdk": "2.x"
   }
 }
