--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-cssmin": "^2.2.1",
     "grunt-contrib-jshint": "^1.1.0",
-    "grunt-contrib-uglify": "^3.3.0"
+    "grunt-contrib-uglify": "^3.3.0",
+    "redis": "^2.8.0",
+    "save-pixels": "^2.3.4",
+    "socket.io": "^2.0.2",
+    "zeros": "^1.0.0"
   }
 }
